# cargo-deplint

./: Cargo.toml  README.md
src/: deps.rs  main.rs
tests/testdata/: direct  empty  errors  multiversions  transitive
